Agregue los iconos para el footer

--- a/PROYEC.CSS
+++ b/PROYEC.CSS
@@ -16,3 +16,21 @@ main{
 .header{
   background-color: darkred;
 }
+.WHATS{
+  width: 30px;
+  height: 30px;
+}
+.face{
+  width: 30px;
+  height: 30px;
+}
+.yout{
+  width: 30px;
+  height: 30px;
+
+}
+.insta{
+  width: 30px;
+  height: 30px;
+
+}
