cambie muchas cosas

--- a/layouts/potreroDigital_proyecto_grupo17_SALUD.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_SALUD.HTML
@@ -8,7 +8,7 @@
 
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="style-de-secciones.css">
+    <link rel="stylesheet" href="potreroDigital_proyecto_grupo17_style-de-secciones.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 
@@ -34,13 +34,13 @@
           SECCIONES
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="DEPORTES.HTML"><img class="dep" src="IMAGENES/deportes.png" alt="">  DEPORTES</a>
-          <a class="dropdown-item" href="SALUD.HTML"> <img class="salu" src="IMAGENES/salud.png" alt="">SALUD</a>
-          <a class="dropdown-item" href="POLITICA.HTML"><img class="politica" src="IMAGENES/politica.png" alt="">   POLITICA</a>
-          <a class="dropdown-item" href="ENTRETENIMIENTO.HTML"><img class="entre" src="IMAGENES/ENTRETENIMIENTO.png" alt="">  ENTRETENIMIENTO</a>
-          <a class="dropdown-item" href="ECONOMIA.HTML"><img class="eco" src="IMAGENES/economia.png" alt="">  ECONOMIA</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_DEPORTES.HTML"><img class="dep" src="IMAGENES/deportes.png" alt="">  DEPORTES</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_SALUD.HTML"> <img class="salu" src="IMAGENES/salud.png" alt="">SALUD</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_POLITICA.HTML"><img class="politica" src="IMAGENES/politica.png" alt="">   POLITICA</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ENTRETENIMIENTO.HTML"><img class="entre" src="IMAGENES/ENTRETENIMIENTO.png" alt="">  ENTRETENIMIENTO</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ECONOMIA.HTML"><img class="eco" src="IMAGENES/economia.png" alt="">  ECONOMIA</a>
 
-      </div>
+        </div>
 
       </li>
 
@@ -85,7 +85,8 @@
       <div class="card" style="width: 18rem;">
             <img src="IMAGENES/covid.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-            <h1 class="card-title">1.000.000 de casos de covid</h1>
+              <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="1.000.000 de casos de covid">
+              </button>1.000.000 de casos de covid</h1> </a>
             <p class="card-text">Siguen creciendo los contagios por covid en el país.</p>
             <a href="noticiaderobo.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
@@ -94,9 +95,9 @@
           <div class="card" style="width: 18rem;">
           <img src="IMAGENES/trump.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-          <h1 class="card-title" <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Donald Trump, positivo de COVID-19">
+            <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Donald Trump, positivo de COVID-19">
+            </button>Donald Trump, positivo de COVID-19</h1></a>
 
-</button>Donald Trump, positivo de COVID-19</h1>
           <p class="card-text">Actualmente se encuentra en el Centro Médico Militar Walter Reed por precaución.</p>
           <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
@@ -105,7 +106,8 @@
           <div class="card" style="width: 18rem;">
           <img src="IMAGENES/anciano.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-          <h1 class="card-title">Los centros de salud se preparan para retomar la actividad física bajo estrictos protocolos</h1>
+            <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Los centros de salud se preparan para retomar la actividad física bajo estrictos protocolos">
+            </button>Los centros de salud se preparan para retomar la actividad física bajo estrictos protocolos</h1> </a>
           <p class="card-text">La fecha estimativa de regreso se hará efectiva una vez finalizada las capacitaciones y entregados los kits sanitizantes para todos los centros de salud.</p>
           <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
@@ -114,7 +116,8 @@
           <div class="card" style="width: 18rem;">
           <img src="IMAGENES/ministro.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-          <h1 class="card-title">Covid-19: Vacunarán primero "a los más vulnerables y a trabajadores de salud"</h1>
+            <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Covid-19: Vacunarán primero a los más vulnerables y a trabajadores de salud">
+            </button>Covid-19: Vacunarán primero "a los más vulnerables y a trabajadores de salud</h1></a>
           <p class="card-text">"Tenemos una posición privilegiada en el acceso a las vacunas con la idea de que lleguen primero a los más vulnerables y los que trabajan en salud", dijo el ministro de Salud, Ginés González García, quien se declaró "optimista".</p>
           <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
       </div>
