--- a/layouts/potreroDigital_proyecto_grupo17_ECONOMIA.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_ECONOMIA.HTML
@@ -7,11 +7,11 @@
 
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="style-de-secciones.css">
+    <link rel="stylesheet" href="potreroDigital_proyecto_grupo17_style-de-secciones.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 
-    <title>MIAL NOTICAS/Entretenimiento</title>
+    <title>MIAL NOTICAS/Economia</title>
   </head>
   <body>
 
@@ -33,11 +33,11 @@
           SECCIONES
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="DEPORTES.HTML"><img class="dep" src="IMAGENES/deportes.png" alt="">  DEPORTES</a>
-          <a class="dropdown-item" href="SALUD.HTML"> <img class="salu" src="IMAGENES/salud.png" alt="">SALUD</a>
-          <a class="dropdown-item" href="POLITICA.HTML"><img class="politica" src="IMAGENES/politica.png" alt="">   POLITICA</a>
-          <a class="dropdown-item" href="ENTRETENIMIENTO.HTML"><img class="entre" src="IMAGENES/ENTRETENIMIENTO.png" alt="">  ENTRETENIMIENTO</a>
-          <a class="dropdown-item" href="ECONOMIA.HTML"><img class="eco" src="IMAGENES/economia.png" alt="">  ECONOMIA</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_DEPORTES.HTML"><img class="dep" src="IMAGENES/deportes.png" alt="">  DEPORTES</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_SALUD.HTML"> <img class="salu" src="IMAGENES/salud.png" alt="">SALUD</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_POLITICA.HTML"><img class="politica" src="IMAGENES/politica.png" alt="">   POLITICA</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ENTRETENIMIENTO.HTML"><img class="entre" src="IMAGENES/ENTRETENIMIENTO.png" alt="">  ENTRETENIMIENTO</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ECONOMIA.HTML"><img class="eco" src="IMAGENES/economia.png" alt="">  ECONOMIA</a>
 
         </div>
 
@@ -77,7 +77,7 @@
 </nav>
 </header>
 
-ACA VAN LAS NOTICIAS DE ENTRETENIMIENTO
+ACA VAN LAS NOTICIAS DE ECONOMIA
 
 
 <footer class="page-footer font-small  bg-dark pt-4">
