--- a/layouts/potreroDigital_proyecto_grupo17_POLITICA.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_POLITICA.HTML
@@ -7,7 +7,7 @@
 
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="style-de-secciones.css">
+    <link rel="stylesheet" href="potreroDigital_proyecto_grupo17_style-de-secciones.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 
@@ -32,11 +32,11 @@
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           SECCIONES
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="DEPORTES.HTML"><img class="dep" src="IMAGENES/deportes.png" alt="">  DEPORTES</a>
-            <a class="dropdown-item" href="SALUD.HTML"> <img class="salu" src="IMAGENES/salud.png" alt="">SALUD</a>
-            <a class="dropdown-item" href="POLITICA.HTML"><img class="politica" src="IMAGENES/politica.png" alt="">   POLITICA</a>
-            <a class="dropdown-item" href="ENTRETENIMIENTO.HTML"><img class="entre" src="IMAGENES/ENTRETENIMIENTO.png" alt="">  ENTRETENIMIENTO</a>
-            <a class="dropdown-item" href="ECONOMIA.HTML"><img class="eco" src="IMAGENES/economia.png" alt="">  ECONOMIA</a>
+            <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_DEPORTES.HTML"><img class="dep" src="IMAGENES/deportes.png" alt="">  DEPORTES</a>
+            <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_SALUD.HTML"> <img class="salu" src="IMAGENES/salud.png" alt="">SALUD</a>
+            <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_POLITICA.HTML"><img class="politica" src="IMAGENES/politica.png" alt="">   POLITICA</a>
+            <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ENTRETENIMIENTO.HTML"><img class="entre" src="IMAGENES/ENTRETENIMIENTO.png" alt="">  ENTRETENIMIENTO</a>
+            <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ECONOMIA.HTML"><img class="eco" src="IMAGENES/economia.png" alt="">  ECONOMIA</a>
 
           </div>
 
