Cambié los botones

--- a/layouts/potreroDigital_proyecto_grupo17_PROYEC.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_PROYEC.HTML
@@ -99,7 +99,7 @@
       <div class="card-body">
       <h1 class="card-title">TODAVIA VACIO</h1>
       <p class="card-text"></p>
-      <a href="" class="btn btn-primary">Informacion completa</a>
+      <a href="potreroDigital_proyecto_grupo17_noticiacompleta.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
   </div>
 
   </div>
@@ -108,15 +108,17 @@
     <div class="card-body">
     <h1 class="card-title">TODAVIA VACIO</h1>
     <p class="card-text"></p>
-    <a href="" class="btn btn-primary">Informacion completa</a>
+    <a href="potreroDigital_proyecto_grupo17_noticiacompleta.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
     </div>
-    </div>
-    <div class="card" style="width: 18rem;">
+
+
+  </div>
+  <div class="card" style="width: 18rem;">
     <img src="" class="card-img-top" alt="...">
     <div class="card-body">
     <h1 class="card-title">TODAVIA VACIO</h1>
     <p class="card-text"></p>
-    <a href="" class="btn btn-primary">Informacion completa</a>
+    <a href="potreroDigital_proyecto_grupo17_noticiacompleta.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
   </div>
 
 </div>
