--- a/layouts/potreroDigital_proyecto_grupo17_PROYEC.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_PROYEC.HTML
@@ -89,7 +89,7 @@
       <div class="card-body">
       <a href="potreroDigital_proyecto_grupo17_noticiacompleta.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Covid-19: Vacunarán primero a los más vulnerables y a trabajadores de salud">
       </button>Covid-19: Vacunarán primero "a los más vulnerables y a trabajadores de salud</h1></a>
-      <p class="card-text">"Tenemos una posición privilegiada en el acceso a las vacunas con la idea de que lleguen primero a los más vulnerables y los que trabajan en salud", dijo el ministro de Salud, Ginés González García, quien se declaró "optimista".</p>
+      <p class="card-text">"Tenemos una posición privilegiada en el acceso a las vacunas con la idea de que lleguen .</p>
       <a href="potreroDigital_proyecto_grupo17_noticiacompleta.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
   </div>
 
