--- a/layouts/potreroDigital_proyecto_grupo17_SALUD.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_SALUD.HTML
@@ -31,20 +31,17 @@
 
         <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          SECCIONES
+          SECCION SALUD
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_DEPORTES.HTML"><img class="dep" src="IMAGENES/deportes.png" alt="">  DEPORTES</a>
-          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_SALUD.HTML"> <img class="salu" src="IMAGENES/salud.png" alt="">SALUD</a>
           <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_POLITICA.HTML"><img class="politica" src="IMAGENES/politica.png" alt="">   POLITICA</a>
           <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ENTRETENIMIENTO.HTML"><img class="entre" src="IMAGENES/ENTRETENIMIENTO.png" alt="">  ENTRETENIMIENTO</a>
           <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ECONOMIA.HTML"><img class="eco" src="IMAGENES/economia.png" alt="">  ECONOMIA</a>
-
         </div>
-
       </li>
-
     </ul>
+
     <ul class="list-unstyled list-inline text-center">
       <li class="list-inline-item">
         <a class="btn-floating btn-fb mx-1">
