cambie las noti

--- a/layouts/potreroDigital_proyecto_grupo17_SALUD.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_SALUD.HTML
@@ -95,7 +95,7 @@
             <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Donald Trump, positivo de COVID-19">
             </button>Donald Trump, positivo de COVID-19</h1></a>
 
-          <p class="card-text">Actualmente se encuentra en el Centro Médico Militar Walter Reed por precaución.</p>
+          <p class="card-text">Actualmente se encuentra en el Centro Médico Militar Walter Reed por precaución. <br></p>
           <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
@@ -105,7 +105,7 @@
           <div class="card-body">
             <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Los centros de salud se preparan para retomar la actividad física bajo estrictos protocolos">
             </button>Los centros de salud se preparan para retomar la actividad física bajo estrictos protocolos</h1> </a>
-          <p class="card-text">La fecha estimativa de regreso se hará efectiva una vez finalizada las capacitaciones y entregados los kits sanitizantes para todos los centros de salud.</p>
+          <p class="card-text">La fecha estimativa de regreso se hará efectiva una vez finalizada las capacitaciones.</p>
           <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
@@ -115,12 +115,11 @@
           <div class="card-body">
             <a href="potreroDigital_proyecto_grupo17_noticiacompleta.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Covid-19: Vacunarán primero a los más vulnerables y a trabajadores de salud">
             </button>Covid-19: Vacunarán primero "a los más vulnerables y a trabajadores de salud</h1></a>
-          <p class="card-text">"Tenemos una posición privilegiada en el acceso a las vacunas con la idea de que lleguen primero a los más vulnerables y los que trabajan en salud", dijo el ministro de Salud, Ginés González García, quien se declaró "optimista".</p>
+          <p class="card-text">"Tenemos una posición privilegiada en el acceso a las vacunas con la idea de que.</p>
           <a href="potreroDigital_proyecto_grupo17_noticiacompleta.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
       </div>
 
       </div>
-
 
 
 
