--- a/layouts/potreroDigital_proyecto_grupo17_style-de-secciones.css
+++ b/layouts/potreroDigital_proyecto_grupo17_style-de-secciones.css
@@ -58,7 +58,7 @@ main{
  .card-text{
      font-size:18px;
      text-overflow: ellipsis;
-     white-space: nowrap;
+     white-space: normal;
      overflow: hidden;
  }
 
@@ -70,11 +70,5 @@ main{
 
  }
 .card{
-  height: 25em;
-}
-
-.set{
-  color: white;
-  display: flex;
-  align-items: center;
+  height: 23em;
 }
