--- a/layouts/potreroDigital_proyecto_grupo17_noticiacompleta.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_noticiacompleta.HTML
@@ -85,21 +85,29 @@
 
 <main class="bg-secondary">
 
-  <div class="texto">
-    <h1 class="display-4 text-light">Covid-19: Vacunarán primero "a los más vulnerables y a trabajadores de salud"</h1>
+  <div class="titulo">
+    <h1>Covid-19: Vacunarán primero "a los más vulnerables y a trabajadores de salud"</h1>
+  </div>
 
-    <p class="font-italic text-light">"Tenemos una posición privilegiada en el acceso a las vacunas con la idea de que lleguen primero a los más vulnerables y los que trabajan en salud", dijo el ministro de Salud, Ginés González García, quien se declaró "optimista".</p>
-    <img class="imagen" src="IMAGENES/ministro.jpg" alt="">
-
-    <p class="text-light">El ministro de Salud, Ginés González García, afirmó hoy que "todavía vamos a tener riesgos por delante, pero estamos tomando todos los recaudos y soy optimista" ya que "mucho depende de cada uno de nosotros, porque la causa de las mayores cantidades de contagios siguen siendo las reuniones sociales".
-
-      Consultado sobre la posibilidad de que se empiecen a reabrir algunas actividades sostuvo que "vemos que los casos de Covid-19 crecieron en las provincias, lo que puedo decir como buena noticia es que ha habido una tendencia a estabilizarse en los contagios".</p>
-    <p class="text-light">"Todo el Ministerio de Salud está descentralizado en las provincias, trabajando codo a codo con las autoridades provinciales; la incertidumbre está en que la vacuna tiene que ser probada y ese no es un procedimiento simple, viene muy acelerado pero tiene plazos que hay que respetar", agregó, en declaraciones al canal C5N.
-
-      El funcionario enfatizó que "estamos negociando con varios laboratorios para garantizar la cantidad suficiente de vacunas lo antes posible, hay tres ensayos clínicos que se desarrollan en el país y uno produce la vacuna aquí".
-
-      El funcionario reiteró que "estamos haciendo precontratos para tener garantizado un stock, empezamos hace mucho tiempo y por eso creo que tenemos una posición privilegiada en el acceso a las vacunas con la idea de que lleguen primero a los más vulnerables y los que trabajan en salud que son los que están más expuestos y los que más necesitamos que no caigan".</p>
+    <div class="parrafo1">
+    <p>"Tenemos una posición privilegiada en el acceso a las vacunas con la idea de que lleguen primero a los más vulnerables y los que trabajan en salud", dijo el ministro de Salud, Ginés González García, quien se declaró "optimista".</p>
     </div>
+
+      <img class="img" src="IMAGENES/ministro.jpg" alt="">
+    
+    <div class="parrafo2">
+      <p>El ministro de Salud, Ginés González García, afirmó hoy que "todavía vamos a tener riesgos por delante, pero estamos tomando todos los recaudos y soy optimista" ya que "mucho depende de cada uno de nosotros, porque la causa de las mayores cantidades de contagios siguen siendo las reuniones sociales".
+
+        Consultado sobre la posibilidad de que se empiecen a reabrir algunas actividades sostuvo que "vemos que los casos de Covid-19 crecieron en las provincias, lo que puedo decir como buena noticia es que ha habido una tendencia a estabilizarse en los contagios".</p>
+      <p>"Todo el Ministerio de Salud está descentralizado en las provincias, trabajando codo a codo con las autoridades provinciales; la incertidumbre está en que la vacuna tiene que ser probada y ese no es un procedimiento simple, viene muy acelerado pero tiene plazos que hay que respetar", agregó, en declaraciones al canal C5N.
+
+        El funcionario enfatizó que "estamos negociando con varios laboratorios para garantizar la cantidad suficiente de vacunas lo antes posible, hay tres ensayos clínicos que se desarrollan en el país y uno produce la vacuna aquí".
+
+        El funcionario reiteró que "estamos haciendo precontratos para tener garantizado un stock, empezamos hace mucho tiempo y por eso creo que tenemos una posición privilegiada en el acceso a las vacunas con la idea de que lleguen primero a los más vulnerables y los que trabajan en salud que son los que están más expuestos y los que más necesitamos que no caigan".</p>
+
+    </div>
+
+
 
 </main>
 
