--- a/layouts/potreroDigital_proyecto_grupo17_style-de-noticias.css
+++ b/layouts/potreroDigital_proyecto_grupo17_style-de-noticias.css
@@ -1,10 +1,30 @@
-.texto {
-margin-right: 15px;
-margin-left: 40px;
+main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+.titulo{
+  height: auto;
+  width: 95%;
+  color: white;
+  font-style: italic;
+}
+.parrafo1{
+  height: auto;
+  width: 80%;
+  color: white;
+  font-style: italic;
+}
+.parrafo2{
+  height: auto;
+  width: 80%;
+  color: white;
 
-.imagen {
-  margin-bottom: 20px;
-  margin-left: 30px;
+}
+@media (max-width: 400px){
+  .img{
+    height: 300px;
+    width: 300px;
+  }
 }
