--- a/layouts/potreroDigital_proyecto_grupo17_noticiacompleta.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_noticiacompleta.HTML
@@ -94,7 +94,7 @@
     </div>
 
       <img class="img" src="IMAGENES/ministro.jpg" alt="">
-    
+
     <div class="parrafo2">
       <p>El ministro de Salud, Ginés González García, afirmó hoy que "todavía vamos a tener riesgos por delante, pero estamos tomando todos los recaudos y soy optimista" ya que "mucho depende de cada uno de nosotros, porque la causa de las mayores cantidades de contagios siguen siendo las reuniones sociales".
 
@@ -104,7 +104,7 @@
         El funcionario enfatizó que "estamos negociando con varios laboratorios para garantizar la cantidad suficiente de vacunas lo antes posible, hay tres ensayos clínicos que se desarrollan en el país y uno produce la vacuna aquí".
 
         El funcionario reiteró que "estamos haciendo precontratos para tener garantizado un stock, empezamos hace mucho tiempo y por eso creo que tenemos una posición privilegiada en el acceso a las vacunas con la idea de que lleguen primero a los más vulnerables y los que trabajan en salud que son los que están más expuestos y los que más necesitamos que no caigan".</p>
-
+        a verrrrrr
     </div>
 
 
