--- a/layouts/potreroDigital_proyecto_grupo17_PROYEC.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_PROYEC.HTML
@@ -123,6 +123,90 @@
 
 </div>
 
+<div class="card" style="width: 18rem;">
+            <img src="" class="card-img-top" alt="...">
+            <div class="card-body">
+              <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+              </button></h1> </a>
+            <p class="card-text"></p>
+            <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+      </div>
+
+      </div>
+          <div class="card" style="width: 18rem;">
+          <img src="" class="card-img-top" alt="...">
+          <div class="card-body">
+            <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            </button></h1></a>
+
+          <p class="card-text"><br></p>
+          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+      </div>
+
+      </div>
+          <div class="card" style="width: 18rem;">
+          <img src="" class="card-img-top" alt="...">
+          <div class="card-body">
+            <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            </button></h1> </a>
+          <p class="card-text"></p>
+          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+      </div>
+
+      </div>
+          <div class="card" style="width: 18rem;">
+          <img src="" class="card-img-top" alt="...">
+          <div class="card-body">
+            <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            </button></h1></a>
+          <p class="card-text">"</p>
+          <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+      </div>
+
+    </div>
+
+    <div class="card" style="width: 18rem;">
+                <img src="" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                  </button></h1> </a>
+                <p class="card-text"></p>
+                <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+          </div>
+
+          </div>
+              <div class="card" style="width: 18rem;">
+              <img src="" class="card-img-top" alt="...">
+              <div class="card-body">
+                <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                </button></h1></a>
+
+              <p class="card-text"><br></p>
+              <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+          </div>
+
+          </div>
+              <div class="card" style="width: 18rem;">
+              <img src="" class="card-img-top" alt="...">
+              <div class="card-body">
+                <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                </button></h1> </a>
+              <p class="card-text"></p>
+              <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+          </div>
+
+          </div>
+              <div class="card" style="width: 18rem;">
+              <img src="" class="card-img-top" alt="...">
+              <div class="card-body">
+                <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                </button></h1></a>
+              <p class="card-text">"</p>
+              <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+          </div>
+
+        </div>
+
 </main>
 
 <!-- Footer -->
