--- a/layouts/potreroDigital_proyecto_grupo17_ECONOMIA.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_ECONOMIA.HTML
@@ -7,7 +7,7 @@
 
 
 
-    <link rel="stylesheet" href="potreroDigital_proyecto_grupo17_style-de-secciones.css">
+    <link rel="stylesheet" href="CSS/potreroDigital_proyecto_grupo17_style-de-secciones.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 
@@ -78,7 +78,7 @@
 
 <main class=" row align-items-center justify-content-center">
 <div class="card" style="width: 18rem;">
-            <img src="" class="card-img-top" alt="...">
+            <img src="IMAGENES/" class="card-img-top" alt="...">
             <div class="card-body">
               <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
               </button></h1> </a>
