--- a/layouts/potreroDigital_proyecto_grupo17_SALUD.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_SALUD.HTML
@@ -34,10 +34,10 @@
           SECCION SALUD
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_DEPORTES.HTML"><img class="dep" src="IMAGENES/deportes.png" alt="">  DEPORTES</a>
-          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_POLITICA.HTML"><img class="politica" src="IMAGENES/politica.png" alt="">   POLITICA</a>
-          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ENTRETENIMIENTO.HTML"><img class="entre" src="IMAGENES/ENTRETENIMIENTO.png" alt="">  ENTRETENIMIENTO</a>
-          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ECONOMIA.HTML"><img class="eco" src="IMAGENES/economia.png" alt="">  ECONOMIA</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_DEPORTES.HTML"><img class="dep" src="IMAGENES/ICONOS/deportes.png" alt="">  DEPORTES</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_POLITICA.HTML"><img class="politica" src="IMAGENES/ICONOS/politica.png" alt="">   POLITICA</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ENTRETENIMIENTO.HTML"><img class="entre" src="IMAGENES/ICONOS/ENTRETENIMIENTO.png" alt="">  ENTRETENIMIENTO</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ECONOMIA.HTML"><img class="eco" src="IMAGENES/ICONOS/economia.png" alt="">  ECONOMIA</a>
         </div>
       </li>
     </ul>
@@ -45,13 +45,13 @@
     <ul class="list-unstyled list-inline text-center">
       <li class="list-inline-item">
         <a class="btn-floating btn-fb mx-1">
-          <a href="https://www.facebook.com/"><img class="face"  src="IMAGENES/facebook.png" alt=""></a>
+          <a href="https://www.facebook.com/"><img class="face"  src="IMAGENES/ICONOS/facebook.png" alt=""></a>
         </a>
 
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-tw mx-1">
-          <a href="https://web.whatsapp.com/"><img class="WHATS"  src="IMAGENES/whatsapp.png" alt=""></a>
+          <a href="https://web.whatsapp.com/"><img class="WHATS"  src="IMAGENES/ICONOS/whatsapp.png" alt=""></a>
 
 
         </a>
@@ -59,13 +59,13 @@
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-li mx-1">
-          <a href="https://www.youtube.com/"><img class="yout"  src="IMAGENES/youtube.png" alt=""></a>
+          <a href="https://www.youtube.com/"><img class="yout"  src="IMAGENES/ICONOS/youtube.png" alt=""></a>
 
         </a>
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-dribbble mx-1">
-          <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="IMAGENES/instagram.png" alt=""></a>
+          <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="IMAGENES/ICONOS/instagram.png" alt=""></a>
 
         </a>
       </li>
@@ -80,7 +80,7 @@
 <main class=" row align-items-center justify-content-center">
 
       <div class="card" style="width: 18rem;">
-            <img src="IMAGENES/covid.jpg" class="card-img-top" alt="...">
+            <img src="IMAGENES/SALUD/covid.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="1.000.000 de casos de covid">
               </button>1.000.000 de casos de covid</h1> </a>
@@ -90,7 +90,7 @@
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="IMAGENES/trump.jpg" class="card-img-top" alt="...">
+          <img src="IMAGENES/SALUD/trump.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Donald Trump, positivo de COVID-19">
             </button>Donald Trump, positivo de COVID-19</h1></a>
@@ -101,7 +101,7 @@
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="IMAGENES/anciano.jpg" class="card-img-top" alt="...">
+          <img src="IMAGENES/SALUD/anciano.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Los centros de salud se preparan para retomar la actividad física bajo estrictos protocolos">
             </button>Los centros de salud se preparan para retomar la actividad física bajo estrictos protocolos</h1> </a>
@@ -111,7 +111,7 @@
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="IMAGENES/ministro.jpg" class="card-img-top" alt="...">
+          <img src="IMAGENES/SALUD/ministro.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <a href="potreroDigital_proyecto_grupo17_noticiacompleta.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Covid-19: Vacunarán primero a los más vulnerables y a trabajadores de salud">
             </button>Covid-19: Vacunarán primero "a los más vulnerables y a trabajadores de salud</h1></a>
@@ -222,13 +222,13 @@
       <ul class="list-unstyled list-inline text-center">
         <li class="list-inline-item">
           <a class="btn-floating btn-fb mx-1">
-            <a href="https://www.facebook.com/"><img class="face"  src="IMAGENES/facebook.png" alt=""></a>
+            <a href="https://www.facebook.com/"><img class="face"  src="IMAGENES/ICONOS/facebook.png" alt=""></a>
           </a>
 
         </li>
         <li class="list-inline-item">
           <a class="btn-floating btn-tw mx-1">
-            <a href="https://web.whatsapp.com/"><img class="WHATS"  src="IMAGENES/whatsapp.png" alt=""></a>
+            <a href="https://web.whatsapp.com/"><img class="WHATS"  src="IMAGENES/ICONOS/whatsapp.png" alt=""></a>
 
 
           </a>
@@ -236,13 +236,13 @@
         </li>
         <li class="list-inline-item">
           <a class="btn-floating btn-li mx-1">
-            <a href="https://www.youtube.com/"><img class="yout"  src="IMAGENES/youtube.png" alt=""></a>
+            <a href="https://www.youtube.com/"><img class="yout"  src="IMAGENES/ICONOS/youtube.png" alt=""></a>
 
           </a>
         </li>
         <li class="list-inline-item">
           <a class="btn-floating btn-dribbble mx-1">
-            <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="IMAGENES/instagram.png" alt=""></a>
+            <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="IMAGENES/ICONOS/instagram.png" alt=""></a>
 
           </a>
         </li>
