--- a/layouts/potreroDigital_proyecto_grupo17_noticiacompleta.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_noticiacompleta.HTML
@@ -31,11 +31,11 @@
           SECCIONES
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_DEPORTES.HTML"><img class="dep" src="IMAGENES/deportes.png" alt="">  DEPORTES</a>
-          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_SALUD.HTML"> <img class="salu" src="IMAGENES/salud.png" alt="">SALUD</a>
-          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_POLITICA.HTML"><img class="politica" src="IMAGENES/politica.png" alt="">   POLITICA</a>
-          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ENTRETENIMIENTO.HTML"><img class="entre" src="IMAGENES/ENTRETENIMIENTO.png" alt="">  ENTRETENIMIENTO</a>
-          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ECONOMIA.HTML"><img class="eco" src="IMAGENES/economia.png" alt="">  ECONOMIA</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_DEPORTES.HTML"><img class="dep" src="IMAGENES/ICONOS/deportes.png" alt="">  DEPORTES</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_SALUD.HTML"> <img class="salu" src="IMAGENES/ICONOS/salud.png" alt="">SALUD</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_POLITICA.HTML"><img class="politica" src="IMAGENES/ICONOS/politica.png" alt="">   POLITICA</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ENTRETENIMIENTO.HTML"><img class="entre" src="IMAGENES/ICONOS/ENTRETENIMIENTO.png" alt="">  ENTRETENIMIENTO</a>
+          <a class="dropdown-item" href="potreroDigital_proyecto_grupo17_ECONOMIA.HTML"><img class="eco" src="IMAGENES/ICONOS/economia.png" alt="">  ECONOMIA</a>
 
         </div>
 
@@ -46,13 +46,13 @@
     <ul class="list-unstyled list-inline text-center">
       <li class="list-inline-item">
         <a class="btn-floating btn-fb mx-1">
-          <a href="https://www.facebook.com/"><img class="face"  src="IMAGENES/facebook.png" alt=""></a>
+          <a href="https://www.facebook.com/"><img class="face"  src="IMAGENES/ICONOS/facebook.png" alt=""></a>
         </a>
 
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-tw mx-1">
-          <a href="https://web.whatsapp.com/"><img class="WHATS"  src="IMAGENES/whatsapp.png" alt=""></a>
+          <a href="https://web.whatsapp.com/"><img class="WHATS"  src="IMAGENES/ICONOS/whatsapp.png" alt=""></a>
 
 
         </a>
@@ -60,13 +60,13 @@
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-li mx-1">
-          <a href="https://www.youtube.com/"><img class="yout"  src="IMAGENES/youtube.png" alt=""></a>
+          <a href="https://www.youtube.com/"><img class="yout"  src="IMAGENES/ICONOS/youtube.png" alt=""></a>
 
         </a>
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-dribbble mx-1">
-          <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="IMAGENES/instagram.png" alt=""></a>
+          <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="IMAGENES/ICONOS/instagram.png" alt=""></a>
 
         </a>
       </li>
@@ -93,7 +93,7 @@
     <p>"Tenemos una posición privilegiada en el acceso a las vacunas con la idea de que lleguen primero a los más vulnerables y los que trabajan en salud", dijo el ministro de Salud, Ginés González García, quien se declaró "optimista".</p>
     </div>
 
-      <img class="img" src="IMAGENES/ministro.jpg" alt="">
+      <img class="img" src="IMAGENES/POLITICA/ministro.jpg" alt="">
 
     <div class="parrafo2">
       <p>El ministro de Salud, Ginés González García, afirmó hoy que "todavía vamos a tener riesgos por delante, pero estamos tomando todos los recaudos y soy optimista" ya que "mucho depende de cada uno de nosotros, porque la causa de las mayores cantidades de contagios siguen siendo las reuniones sociales".
@@ -121,13 +121,13 @@
     <ul class="list-unstyled list-inline text-center">
       <li class="list-inline-item">
         <a class="btn-floating btn-fb mx-1">
-          <a href="https://www.facebook.com/"><img class="face"  src="IMAGENES/facebook.png" alt=""></a>
+          <a href="https://www.facebook.com/"><img class="face"  src="IMAGENES/ICONOS/facebook.png" alt=""></a>
         </a>
 
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-tw mx-1">
-          <a href="https://web.whatsapp.com/"><img class="WHATS"  src="IMAGENES/whatsapp.png" alt=""></a>
+          <a href="https://web.whatsapp.com/"><img class="WHATS"  src="IMAGENES/ICONOS/whatsapp.png" alt=""></a>
 
 
         </a>
@@ -135,13 +135,13 @@
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-li mx-1">
-          <a href="https://www.youtube.com/"><img class="yout"  src="IMAGENES/youtube.png" alt=""></a>
+          <a href="https://www.youtube.com/"><img class="yout"  src="IMAGENES/ICONOS/youtube.png" alt=""></a>
 
         </a>
       </li>
       <li class="list-inline-item">
         <a class="btn-floating btn-dribbble mx-1">
-          <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="IMAGENES/instagram.png" alt=""></a>
+          <a href="https://www.instagram.com/?hl=es-la"><img class="insta"  src="IMAGENES/ICONOS/instagram.png" alt=""></a>
 
         </a>
       </li>
